k8s-artifacts/helm/kong-ingress/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-manager-ingress
  namespace: kong-ingress
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/protocols: "https"
spec:
  ingressClassName: kong
  rules:
    - host: kongmanager.blocksafe.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-manager
                port:
                  number: 8002
